# happy-cube

./: CMakeLists.txt
glad/include/glad/: gl.h
glad/src/: gl.c
shaders/: DiffuseLightComponent.frag  VertexShaderStart.glsl
src/: LadeShader.h  main.cpp
